# pynertia

./: .gitignore  README.md  components.json  db.sqlite3  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.mts
.husky/: pre-commit
app/: settings.py  urls.py  views.py
authentication/: forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
src/entrypoints/: main.tsx  style.css
src/layouts/: __root.tsx
src/pages/: dashboard.tsx  index.tsx  signin.tsx  signup.tsx
templates/: index.html
