[project]
name = "pynertia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-vite>=3.1.0",
    "inertia-django>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "ty>=0.0.1a16",
]
